--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <p class="muted">Latihan struktur HTML, CSS dasar, layout, dan komponen visual.  
       Termasuk mini-project untuk pemula.</p>
     <a href="html-css.html" target="_blank" class="btn">Buka Playground</a>
+    <a href="https://drive.google.com/drive/folders/1rUEbn5Qn-0BbFL6T6HO0NjB2dt4RyIRU?usp=sharing" target="_blank" class="btn">Upload Projek Level 7</a>
   </section>
 
   <section class="card">
@@ -79,6 +80,8 @@
     <p class="muted">Eksperimen dengan logika dasar JavaScript, mulai dari variabel, operator,  
       kondisi, loop, hingga array dengan tampilan <i>console-style</i>.</p>
     <a href="javascript.html" target="_blank" class="btn">Buka Playground</a>
+    <hr>
+    <a href="https://drive.google.com/drive/folders/1hO-LDoWhOif6xEknLpQQVeDSjFArPtCf?usp=sharing" target="_blank" class="btn">Upload Projek Level 8</a>
   </section>
 
   <section class="card">
@@ -87,9 +90,11 @@
     <p class="muted">Belajar sintaks Python, kontrol alur, fungsi, dan konsep Pygame (sprite, animasi, skor)  
       dengan simulasi canvas interaktif di browser.</p>
     <a href="python.html" target="_blank" class="btn">Buka Playground</a>
+    <a href="https://drive.google.com/drive/folders/10elgpeuc4AurLvO1b_H3hOrHXakFU_yt?usp=sharing" target="_blank" class="btn">Upload Projek Level 9</a>
   </section>
 </main>
 
 <footer>© 2025 Playground Coding – Dibuat dengan ♥</footer>
 </body>
 </html>
+
