--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <section class="card">
     <span class="badge">JavaScript</span>
     <h2>Playground Logika</h2>
-    <p class="muted">Eksperimen dengan logika dasar JavaScript, mulai dari variabel, operator,  
+    <p class="muted">Eksperimen logika dasar: variabel, operator,  
       kondisi, loop, hingga array dengan tampilan <i>console-style</i>.</p>
     <a href="javascript.html" target="_blank" class="btn">Buka Playground</a>
     <br>
@@ -89,9 +89,9 @@
 
   <section class="card">
     <span class="badge">Python & Pygame</span>
-    <h2>Playground Visual & Simulasi</h2>
-    <p class="muted">Belajar sintaks Python, kontrol alur, fungsi, dan konsep Pygame (sprite, animasi, skor)  
-      dengan simulasi canvas interaktif di browser.</p>
+    <h2>Playground Visual</h2>
+    <p class="muted">Belajar sintaks Python, kontrol alur, fungsi, dan konsep Pygame
+      dengan simulasi canvas interaktif.</p>
     <a href="python.html" target="_blank" class="btn">Buka Playground</a>
     <br>
     <hr>
@@ -102,5 +102,6 @@
 <footer>© 2025 Playground Coding – Dibuat dengan ♥</footer>
 </body>
 </html>
+
 
 
