--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Playground Coding Interaktif</title>
+<title>Coding Playground</title>
 <style>
   :root{
     --bg:#e9eef5; --card:#edf2fa; --text:#1f2937; --muted:#5b6b7a;
@@ -59,8 +59,8 @@
 </head>
 <body>
 <header>
-  <h1>💻 Playground Coding Interaktif</h1>
-  <p>Pilih salah satu playground untuk belajar HTML & CSS, JavaScript, atau Python + Pygame secara interaktif.  
+  <h1>💻 Coding Playground</h1>
+  <p>Pilih salah satu playground untuk belajar HTML & CSS, JavaScript, atau Python.  
      Semua halaman sudah dilengkapi tombol <b>Run</b>, <b>Reset</b>, dan <b>Copy</b>.</p>
 </header>
 
@@ -102,6 +102,7 @@
 <footer>© 2025 Playground Coding – Dibuat dengan ♥</footer>
 </body>
 </html>
+
 
 
 
